--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   pretty_qr_code: ^3.3.0
+  camera: ^0.11.0+2
 
 dev_dependencies:
   flutter_test:
