--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   pretty_qr_code: ^3.3.0
   camera: ^0.11.0+2
+  toggle_switch: ^2.3.0
 
 dev_dependencies:
   flutter_test:
