--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   pretty_qr_code: ^3.3.0
   camera: ^0.11.0+2
   toggle_switch: ^2.3.0
+  flutter_contacts: ^1.1.9+2
 
 dev_dependencies:
   flutter_test:
